@@ -92,6 +92,9 @@ proxyreload = 60
 foreground = 0
 
 ; Enable debug logging. default: 0
-;   Logs are written to working directory and over-written on startup
-;   A log is automatically created if Px crashes for some reason
+;   1 = Log to script dir [--debug]
+;   2 = Log to working dir
+;   3 = Log to working dir with unique filename [--uniqlog]
+;   4 = Log to stdout [--verbose]. Implies --foreground
+;   If Px crashes without logging, traceback is written to the working dir
 log = 0
