@@ -16,6 +16,8 @@ v0.9.0
   listen and allow rules
 - Fixed #199 - cache auth mechanism that libcurl discovers and uses with
   upstream proxy - speeds up transactions and avoids POST/PUT rewind issue
+- Added support to log to the working directory - #189. Logging destination now
+  configurable via CLI, env and px.ini.
 
 v0.8.4 - 2023-02-06
 - Support for specifying PAC file encoding - #167
